Pipeline components + Local training

--- a/notebooks/azure_ml_pipeline_demo.ipynb
+++ b/notebooks/azure_ml_pipeline_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compute target named \"cpu-cluster\" already exists!\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    cpu_cluster = ml_client.compute.get(cluster_name)\n",
@@ -74,29 +82,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "envs = ml_client.environments.list()\n",
-    "for env in envs:\n",
-    "    print(env.name)"
+    "parent_dir ='../src/python/pipeline/components'\n",
+    "prepare_dataset = load_component(source=os.path.join(parent_dir, 'prepare_dataset/prepare-dataset.yml'))\n",
+    "os.path.isfile(os.path.join(parent_dir, 'prepare_dataset/prepare-dataset.yml'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parent_dir ='../src/python/pipeline/config'\n",
-    "prepare_dataset = load_component(source=os.path.join(parent_dir, 'prepare-dataset.yml'))\n",
-    "os.path.isfile(os.path.join(parent_dir, 'prepare-dataset.yml'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,9 +140,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Class AutoDeleteSettingSchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
+      "Class AutoDeleteConditionSchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
+      "Class BaseAutoDeleteSettingSchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
+      "Class IntellectualPropertySchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
+      "Class ProtectionLevelSchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
+      "Class BaseIntellectualPropertySchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
+      "\u001b[32mUploading prepare_dataset (5.47 MBs): 100%|██████████| 5474204/5474204 [00:02<00:00, 2262048.31it/s]\n",
+      "\u001b[39m\n",
+      "\n",
+      "pathOnCompute is not a known attribute of class <class 'azure.ai.ml._restclient.v2023_04_01_preview.models._models_py3.UriFolderJobOutput'> and will be ignored\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Name</th><th>Type</th><th>Status</th><th>Details Page</th></tr><tr><td>notebooks</td><td>sweet_oyster_qnls6kftv9</td><td>pipeline</td><td>NotStarted</td><td><a href=\"https://ml.azure.com/runs/sweet_oyster_qnls6kftv9?wsid=/subscriptions/31bc5bb0-1143-4d0c-ba02-570ecc764364/resourcegroups/Face_Attribute_Recognition/workspaces/test_ws&amp;tid=6a3548ab-7570-4271-91a8-58da00697029\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td></tr></table>"
+      ],
+      "text/plain": [
+       "PipelineJob({'inputs': {'raw_data': <azure.ai.ml.entities._job.pipeline._io.base.PipelineInput object at 0x1487a3770>}, 'outputs': {'output_data': <azure.ai.ml.entities._job.pipeline._io.base.PipelineOutput object at 0x1486b7260>}, 'jobs': {}, 'component': PipelineComponent({'latest_version': None, 'intellectual_property': None, 'auto_increment_version': False, 'source': 'REMOTE.WORKSPACE.JOB', 'is_anonymous': True, 'auto_delete_setting': None, 'name': 'azureml_anonymous', 'description': None, 'tags': {}, 'properties': {}, 'print_as_yaml': False, 'id': None, 'Resource__source_path': None, 'base_path': '/Users/peterbrezovcsik/Documents/PythonProjects/Face_Recognition/notebooks', 'creation_context': None, 'serialize': <msrest.serialization.Serializer object at 0x1487a3200>, 'version': '1', 'schema': None, 'type': 'pipeline', 'display_name': 'demo_train_pipeline_with_mlflow_v2', 'is_deterministic': None, 'inputs': {'raw_data': {}}, 'outputs': {'output_data': {}}, 'yaml_str': None, 'other_parameter': {}, 'jobs': {'step_prepare_dataset': Command({'parameters': {}, 'init': False, 'name': 'step_prepare_dataset', 'type': 'command', 'status': None, 'log_files': None, 'description': None, 'tags': {}, 'properties': {}, 'print_as_yaml': False, 'id': None, 'Resource__source_path': '', 'base_path': '/Users/peterbrezovcsik/Documents/PythonProjects/Face_Recognition/notebooks', 'creation_context': None, 'serialize': <msrest.serialization.Serializer object at 0x1487a3020>, 'allowed_keys': {}, 'key_restriction': False, 'logger': <Logger attr_dict (WARNING)>, 'display_name': None, 'experiment_name': None, 'compute': None, 'services': None, 'comment': None, 'job_inputs': {'input_data': '${{parent.inputs.raw_data}}'}, 'job_outputs': {'output_data': '${{parent.outputs.output_data}}'}, 'inputs': {'input_data': <azure.ai.ml.entities._job.pipeline._io.base.NodeInput object at 0x1487194f0>}, 'outputs': {'output_data': <azure.ai.ml.entities._job.pipeline._io.base.NodeOutput object at 0x1487a3140>}, 'component': 'azureml_anonymous:68454ff5-b92e-428a-addc-ea3e9ca249dd', 'referenced_control_flow_node_instance_id': None, 'kwargs': {'services': None}, 'instance_id': 'b0111687-0640-4bad-9ba8-489d2f0784b1', 'source': 'YAML.COMPONENT', 'validate_required_input_not_provided': True, 'limits': None, 'identity': None, 'distribution': None, 'environment_variables': {}, 'environment': None, 'resources': None, 'queue_settings': None, 'parent_job_name': None, 'swept': False})}, 'job_types': {'command': 1}, 'job_sources': {'YAML.COMPONENT': 1}, 'source_job_id': None}), 'type': 'pipeline', 'status': 'NotStarted', 'log_files': None, 'name': 'sweet_oyster_qnls6kftv9', 'description': None, 'tags': {}, 'properties': {'mlflow.source.git.repoURL': 'https://github.com/peterrr1/Face_Recognition.git', 'mlflow.source.git.branch': 'dev', 'mlflow.source.git.commit': '9bbc58903640251950164eff452316ec66f1cac0', 'azureml.git.dirty': 'True'}, 'print_as_yaml': False, 'id': '/subscriptions/31bc5bb0-1143-4d0c-ba02-570ecc764364/resourceGroups/Face_Attribute_Recognition/providers/Microsoft.MachineLearningServices/workspaces/test_ws/jobs/sweet_oyster_qnls6kftv9', 'Resource__source_path': '', 'base_path': '/Users/peterbrezovcsik/Documents/PythonProjects/Face_Recognition/notebooks', 'creation_context': <azure.ai.ml.entities._system_data.SystemData object at 0x148414fb0>, 'serialize': <msrest.serialization.Serializer object at 0x1487189b0>, 'display_name': 'demo_train_pipeline_with_mlflow_v2', 'experiment_name': 'notebooks', 'compute': None, 'services': {'Tracking': {'endpoint': 'azureml://germanywestcentral.api.azureml.ms/mlflow/v1.0/subscriptions/31bc5bb0-1143-4d0c-ba02-570ecc764364/resourceGroups/Face_Attribute_Recognition/providers/Microsoft.MachineLearningServices/workspaces/test_ws?', 'type': 'Tracking'}, 'Studio': {'endpoint': 'https://ml.azure.com/runs/sweet_oyster_qnls6kftv9?wsid=/subscriptions/31bc5bb0-1143-4d0c-ba02-570ecc764364/resourcegroups/Face_Attribute_Recognition/workspaces/test_ws&tid=6a3548ab-7570-4271-91a8-58da00697029', 'type': 'Studio'}}, 'settings': {}, 'identity': None, 'default_code': None, 'default_environment': None})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prepped_job = prepare_pipeline_job(cluster_name)\n",
     "ml_client.jobs.create_or_update(prepped_job)"
