--- a/notebooks/azure_ml_demo.ipynb
+++ b/notebooks/azure_ml_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "import pandas as pd\n",
     "import datetime\n",
     "import sys\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n"
    ]
   },
   {
